--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <div class="conteudo__links">
                 <h2 class="subtitulo__links">Acesse minhas redes:</h2>
-                <a class="conteudo__botao__links" href="https://github.com/guilhermeonrails">
+                <a class="conteudo__botao__links" href="https://github.com/JohnOliverSoares">
                     <img src="assets/github.png">
                     Github
                  </a>
